--- a/views/_layouts/_layout-condition.html
+++ b/views/_layouts/_layout-condition.html
@@ -2,43 +2,48 @@
 
 <main>
 
-    <div class="content">
+  <div class="content">
         
-        <div class="grid-row">
-            <div class="grid-3-3">
-                <ul class="breadcrumb">
-                    {% block breadcrumb %}{% endblock %}
-                </ul>
-            </div>
-        </div>
+    <div class="grid-row">
+      <div class="grid-3-3">
+          <ul class="breadcrumb">
+            {% block breadcrumb %}{% endblock %}
+          </ul>
+      </div>
+    </div>
 
-        <div class="grid-row">
-            <div class="grid-3-3">
-                <div class="header-panel">
-                    {% if backbutton %}
-                        <a href="{{backbutton}}" class="button -back">Back</a>
-                    {% endif %}
-                    <h2 class="header">{{pagetitle}}</h2>
-                    <div class="content-seperator"></div>
-                    {% if subtitle %}
-                        <h3 class="precis">{{subtitle}}</h3>
-                    {% endif %}
-                </div>
-            </div>  
-        </div>
+    <div class="grid-row">
+      <div class="grid-3-3">
+        <header class="header-panel">
+        {% if backbutton %}
+          <a href="{{backbutton}}" class="button -back">Back</a>
+        {% endif %}
+        <h2 class="header">{{pagetitle}}</h2>
+        <div class="content-seperator"></div>
+        {% if subtitle %}
+          <h3 class="precis">{{subtitle}}</h3>
+        {% endif %}
+        </header>
+      </div>  
+    </div>
         
-        <div class="grid-row">
-            <div class="grid-10-16">
-                {% block content %}{% endblock %}
-            </div>
-            <div class="grid-6-16">
-                <aside class="callout urgent">
-                    {% block asideurgent %}{% endblock %}
-                </aside>
-            </div>
-        </div>
+    <div class="grid-row">
 
-    </div> <!-- content -->
+      <div class="grid-10-16">
+        {% block content %}{% endblock %}
+      </div>
+
+      {% if layout %}
+      <div class="{% if layout == "asideRight" %}grid-6-16{% elseif layout == "asideBottom" %}grid-10-16{% endif %}">
+        <aside class="callout urgent">
+          {% block callout %}{% endblock %}
+        </aside>
+      </div>
+      {% endif %}
+
+    </div>
+
+  </div> <!-- content -->
     
 </main>
 
