--- a/views/guide/hernia/index.html
+++ b/views/guide/hernia/index.html
@@ -36,7 +36,8 @@
 
     <h2 class="heading-xlarge" id="02">2. Seeing a surgeon</h2>
     <p>The surgeon will explain what treatment options you have, and the benefits and risks of surgery. You can ask them any questions. This is the time when you decide if you want to go ahead with the operation.</p>
-    <p><a href="/guide/hernia/seeing-the-surgeon">Seeing the surgeon</a></p>
+    <p><a href="/condition/hernia/hernia-operation">About your hernia operation</a></p>
+    <p><a href="/guide/hernia/seeing-the-surgeon">Questions to ask your surgeon</a></p>
 
     <div class="header-prefix">
         <span>Approx 2 weeks</span>
@@ -83,6 +84,6 @@
     <h2 class="heading-xlarge">7. Going home and recovery</h2>
     <p>You can go home when you feel well enough, and can eat and drink. You must be able to walk (if you’re not in a wheelchair), and pee.</p>
     <p>You’ll need someone to help you home by car or taxi and stay with you for at least 24 hours. </p>
-    <p><a href="07-help-with-recovery">Going home and recovery</a></p>
+    <p><a href="/guide/hernia/recovery">Going home and recovery</a></p>
 
 {% endblock %}
