--- a/views/_layouts/_layout-guide.html
+++ b/views/_layouts/_layout-guide.html
@@ -15,13 +15,13 @@
         <div class="grid-row">
             
             <div class="grid-1-3">
-                <div class="header-panel">
+                <header class="header-panel">
                     {% if backbutton %}
                     <p><a href="{{backbutton}}" class="button -back">Back</a></p>
                     {% endif %}
                     <h2 class="header">{{pagetitle}}</h2>
                     {% block header %}{% endblock %}
-                </div>
+                </header>
             </div>
             
             <div class="grid-2-3">
@@ -36,4 +36,4 @@
     
 </main>
 
-    {% include "_includes/footer.html" %}
+{% include "_includes/footer.html" %}
