--- a/views/guide/hernia/preparing-for-your-pre-op.html
+++ b/views/guide/hernia/preparing-for-your-pre-op.html
@@ -1,39 +1,32 @@
-{% extends "_layouts/_layout-default.html" %}
+{% extends "_layouts/_layout-guide.html" %}
 
-{% set pagetitle = "Seeing the surgeon" %}
+{% set pagetitle = "Your pre-operative assessment appointment" %}
+{% set backbutton = "/guide/hernia" %}
+
+{% block breadcrumb %}
+    <li><a href="#" class="button -bordered -small">Conditions</a></li>
+    <li><a href="#" class="button -bordered -small">Lumps & swellings</a></li>
+    <li><a href="/condition/hernia" class="button -bordered -small">Hernia</a></li>
+    <li><a href="/guide/hernia" class="button -bordered -small">Hernia surgery</a></li>
+    <li class="selected">{{pagetitle}}</li>
+{% endblock %}
+
+{% block header %}
+    <div class="content-seperator"></div>
+{% endblock %}
 
 {% block content %}
 
-<div class="content">
-
-  <div class="grid-row">
-
-    <div class="grid-1-3">
-      <div class="header-panel">
-        <p><a href="guide-surgery" class="button -back">Back</a></p>
-        <h2 class="header">Your pre-operative assessment appointment</h2>
-        <div class="content-seperator"></div>
-        <p></p>
-      </div>
-    </div>
-
-    <div class="grid-2-3">
-
-      <div class="content-seperator -grey" id="01"></div>
-      <p>During your pre-operative assessment the nurse will ask you about your health and do things like:</p>
-      <ul>
+    <!--<div class="content-seperator -grey" id="01"></div>-->
+    <p>During your pre-operative assessment the nurse will ask you about your health and do things like:</p>
+    <ul>
         <li>take your blood pressure</li>
         <li>weigh you</li>
         <li>test you for bacteria, such as <a href="http://www.nhs.uk/conditions/MRSA/Pages/Introduction.aspx">MRSA</a></li>
-      </ul>
-      <p>You may need other tests, like blood tests and you may also speak to the anaesthetist.</p>
-      <p>If you take medicine, bring it with you (including vitamins and herbal supplements).</p>
-      <p>You’ll also be give more information about your surgery, such as the time and what you can and drink on the day.</p>
-      <p>This appointment usually lasts an hour.</p>
-    </div>
-
-  </div> <!-- end row -->
-
-</div> <!-- content -->
+    </ul>
+    <p>You may need other tests, like blood tests and you may also speak to the anaesthetist.</p>
+    <p>If you take medicine, bring it with you (including vitamins and herbal supplements).</p>
+    <p>You’ll also be give more information about your surgery, such as the time and what you can and drink on the day.</p>
+    <p>This appointment usually lasts an hour.</p>
 
 {% endblock %}
