--- a/views/condition/hernia/index.html
+++ b/views/condition/hernia/index.html
@@ -45,7 +45,13 @@
   <h3>Hernia surgery</h3>
   <p>You should be able to have an <a href="/condition/hernia/hernia-operation">operation for hernia</a> within 18 weeks of your GP appointment.</p> 
   <p>You’ll need to have some appointments before you have your hernia operation.</p>
-  <p><a class="callout guide" href="/guide/hernia">Hernia surgery guide</a></p>
+
+  <p>
+    <a class="callout callout--guide" href="/guide/hernia">
+      <span class="callout__small">A guide to</span>
+      <span class="callout__title bold">Hernia surgery</span>
+    </a>
+</p>
 
 {% endblock %}
 
