--- a/assets/scss/modules/callout/_callout.scss
+++ b/assets/scss/modules/callout/_callout.scss
@@ -1,18 +1,36 @@
+/* Block */
+
 .callout {
+  display: block;
   padding: $leading $leading;
-
-  > .column-list {
-      -webkit-columns: 2;
-      -moz-columns: 2;
-      columns: 2;
-
-  }
   
   // Remove margin from top and bottom of first and last elements in callout
   > :first-child  { margin-top: 0; }
   > :last-child   { margin-bottom: 0; }
   
 }
+
+/* Element */
+
+.callout__small {
+  @extend .smallprint;
+  display: block;
+}
+
+.callout__title {
+  display: block;
+  color: $text-colour;
+}
+
+/* Modifier */
+
+.callout--guide {
+  border: 2px solid $nhs-grey-light;
+  text-decoration: none;
+}
+
+
+// Other callouts to organise
 
 .callout.aside {
   position: relative;
@@ -133,9 +151,4 @@
       margin-bottom:  0px;
   }
 
-}
-
-.callout.guide {
-  border: 2px solid $nhs-grey-light;
-  display: block;
 }
