--- a/views/condition/hernia/index.html
+++ b/views/condition/hernia/index.html
@@ -47,11 +47,45 @@
   <p>You’ll need to have some appointments before you have your hernia operation.</p>
 
   <p>
+    <a class="callout callout--corner" href="/guide/hernia">
+      <span class="callout__small">A guide to</span>
+      <span class="callout__title bold">Hernia surgery</span>
+    </a>
+  </p>
+
+  <p>
     <a class="callout callout--guide" href="/guide/hernia">
       <span class="callout__small">A guide to</span>
       <span class="callout__title bold">Hernia surgery</span>
     </a>
-</p>
+  </p>
+
+  <p>
+    <a class="callout callout--steps" href="/guide/hernia">
+      <span class="callout__small">Step by step guide</span>
+      <span class="callout__title bold">Hernia surgery</span>
+    </a>
+  </p>
+
+  <p>
+    <a class="callout callout--line" href="/guide/hernia">
+      <span class="callout__small">Step by step guide</span>
+      <span class="callout__title bold">Hernia surgery</span>
+    </a>
+  </p>
+
+  <p>
+    <a class="callout callout--corner" href="/guide/hernia">
+      <span class="callout__title bold">Hernia surgery guide</span>
+    </a>
+  </p>
+
+  <p>
+    <a class="callout callout--corner" href="/guide/hernia">
+      <span class="callout__title bold">Hernia surgery</span>
+      <span class="callout__small">Step by step guide</span>
+    </a>
+  </p>
 
 {% endblock %}
 
