--- a/views/condition/hernia/index.html
+++ b/views/condition/hernia/index.html
@@ -42,7 +42,7 @@
   <h2 class="heading-xlarge" id="03">Your hernia treatment</h2>
   <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
   <p>You’ll need an operation to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
-  <h3>Hernia surgery</h3>
+  <h3 class="heading-large">Hernia surgery</h3>
   <p>You should be able to have an <a href="/condition/hernia/hernia-operation">operation for hernia</a> within 18 weeks of your GP appointment.</p> 
   <p>You’ll need to have some appointments before you have your hernia operation.</p>
 
@@ -50,6 +50,14 @@
     <a class="callout callout--corner" href="/guide/hernia">
       <span class="callout__small">A guide to</span>
       <span class="callout__title bold">Hernia surgery</span>
+    </a>
+  </p>
+
+<!--
+
+  <p>
+    <a class="callout callout--corner" href="/guide/hernia">
+      <span class="callout__title bold">Hernia surgery guide</span>
     </a>
   </p>
 
@@ -76,16 +84,12 @@
 
   <p>
     <a class="callout callout--corner" href="/guide/hernia">
-      <span class="callout__title bold">Hernia surgery guide</span>
-    </a>
-  </p>
-
-  <p>
-    <a class="callout callout--corner" href="/guide/hernia">
       <span class="callout__title bold">Hernia surgery</span>
       <span class="callout__small">Step by step guide</span>
     </a>
   </p>
+
+-->
 
 {% endblock %}
 
