--- a/views/guide/hernia/seeing-the-surgeon.html
+++ b/views/guide/hernia/seeing-the-surgeon.html
@@ -1,6 +1,7 @@
 {% extends "_layouts/_layout-guide.html" %}
 
 {% set pagetitle = "Questions to ask your surgeon" %}
+{% set subtitle = "Your first appointment will be with a surgeon. You can bring someone with you" %}
 {% set backbutton = "/guide/hernia" %}
 
 {% block breadcrumb %}
@@ -11,10 +12,7 @@
     <li class="selected">{{pagetitle}}</li>
 {% endblock %}
 
-{% block header %}
-        <div class="content-seperator"></div>
-        <p>Your first appointment will be with a surgeon. You can bring someone with you.</p>
-{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
 
