--- a/views/guide/hernia/preparing-for-your-pre-op.html
+++ b/views/guide/hernia/preparing-for-your-pre-op.html
@@ -11,9 +11,7 @@
     <li class="selected">{{pagetitle}}</li>
 {% endblock %}
 
-{% block header %}
-    <div class="content-seperator"></div>
-{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
 
