--- a/views/_layouts/_layout-guide.html
+++ b/views/_layouts/_layout-guide.html
@@ -4,13 +4,13 @@
 
     <div class="content">
         
-        <div class="grid-row">
+        <!--<div class="grid-row">
             <div class="grid-3-3">
                 <ul class="breadcrumb">
                     {% block breadcrumb %}{% endblock %}
                 </ul>
             </div>
-        </div>
+        </div> -->
 
         <div class="grid-row">
             
