--- a/views/condition/hernia/index.html
+++ b/views/condition/hernia/index.html
@@ -41,32 +41,10 @@
 
   <h2 class="heading-xlarge" id="03">Your hernia treatment</h2>
   <p>Your GP will confirm if your lump is a hernia and discuss how it can be treated.</p>
-  <p>You’ll need an operation to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
+<p>You’ll need an <a href="/condition/hernia/hernia-operation">operation</a> to repair your hernia. You may not need one straight away - it depends on the the type of hernia and if it’s causing you problems. Your hernia may get bigger if it’s not treated, although this could take months or even years.</p>
   <h3 class="heading-large">Hernia surgery</h3>
-  <p>You should be able to have an <a href="/condition/hernia/hernia-operation">operation for hernia</a> within 18 weeks of your GP appointment.</p> 
+  <p>You should be able to have an operation for hernia within 18 weeks of your GP appointment.</p> 
   <p>You’ll need to have some appointments before you have your hernia operation.</p>
-
- <!-- <p>
-    <a class="callout callout--corner" href="/guide/hernia">
-      <span class="callout__small">A guide to</span>
-      <span class="callout__title bold">Hernia surgery</span>
-    </a>
-  </p>
--->
-  <p>
-    <a class="callout info callout--info" href="/guide/hernia">
-      <span class="callout__small">A guide to</span>
-      <span class="callout__title bold">Hernia surgery</span>
-    </a>
-  </p>
-
-<!--
-
-  <p>
-    <a class="callout callout--corner" href="/guide/hernia">
-      <span class="callout__title bold">Hernia surgery guide</span>
-    </a>
-  </p>
 
   <p>
     <a class="callout callout--guide" href="/guide/hernia">
@@ -74,29 +52,6 @@
       <span class="callout__title bold">Hernia surgery</span>
     </a>
   </p>
-
-  <p>
-    <a class="callout callout--steps" href="/guide/hernia">
-      <span class="callout__small">Step by step guide</span>
-      <span class="callout__title bold">Hernia surgery</span>
-    </a>
-  </p>
-
-  <p>
-    <a class="callout callout--line" href="/guide/hernia">
-      <span class="callout__small">Step by step guide</span>
-      <span class="callout__title bold">Hernia surgery</span>
-    </a>
-  </p>
-
-  <p>
-    <a class="callout callout--corner" href="/guide/hernia">
-      <span class="callout__title bold">Hernia surgery</span>
-      <span class="callout__small">Step by step guide</span>
-    </a>
-  </p>
-
--->
 
 {% endblock %}
 
