--- a/views/condition/hernia/types-of-hernia.html
+++ b/views/condition/hernia/types-of-hernia.html
@@ -19,11 +19,11 @@
         <p>A hernia happens when your bowel or fatty tissue pokes through a gap in the muscle. This is because of a weakness in your muscle. It can be something you’re born with or caused by a strain, such as straining on the toilet or being overweight.  </p>
         <p>You’re more prone to hernias as you get older.</p>
     </div>
-
-    <div class="no-mobile-image"><img src="/images/hernia/hernia-illustration.png"></div>
-
-
-    <div class="content-seperator -grey"></div>
+    
+    <figure class="no-mobile-image">
+      <img src="/images/hernia/hernia-illustration.png">
+      <figcaption>A hernia happens when your bowel or fatty tissue pokes through a gap in the muscle</figcaption>
+    </figure>
 
     <div>
         <h2 class="heading-xlarge">Types of hernia</h2>
