--- a/views/guide/hernia/seeing-the-surgeon.html
+++ b/views/guide/hernia/seeing-the-surgeon.html
@@ -40,7 +40,7 @@
       </ul>
 
       <p>You can ask any question you want. This is your time with the surgeon.</p>
-      <p>The Royal College of Surgeons of England (RCS) website have answers to more questions about surgery.</p>
+      <p><a href="https://www.rcseng.ac.uk/patient-care/having-surgery/">The Royal College of Surgeons of England (RCS) website</a> have answers to more questions about surgery.</p>
       <p>Your surgeon may be able to book you the date for your operation.</p>
       <p>This appointment usually lasts 15-20 mins.</p>
 
